# WikiServer

./: README  Wiki.cabal
doc/: grammar.standard.txt  grammar.txt
src/: Datatype.hs  Parser.hs  Wiki.hs
www/: creoletest.wiki  haskell.wiki  myFile.txt  test2.wiki  test3.wiki  test4.wiki  test5.wiki  test6.wiki  uscs2010.wiki
